--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
+    "@nuxtjs/google-fonts": "^3.0.0",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
     "nuxt-vuefire": "^0.1.6",
